--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-super-grid": "^4.1.3",
     "react-native-vector-icons": "^8.1.0",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
