--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-native-screens": "^3.4.0",
     "react-native-super-grid": "^4.1.3",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
