added custom fonts

--- a/ios/Sportyma/Info.plist
+++ b/ios/Sportyma/Info.plist
@@ -69,6 +69,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>BlankenyScript.otf</string>
+		<string>Legacy.ttf</string>
 	</array>
 </dict>
 </plist>
