--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.1.1",
     "react-native-modal": "^12.0.2",
@@ -37,6 +38,7 @@
     "@redux-saga/types": "^1.1.0",
     "@types/react": "^17.0.14",
     "@types/react-native": "^0.64.12",
+    "@types/react-native-charts-wrapper": "^0.5.2",
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-redux": "^7.1.18",
     "babel-jest": "^26.6.3",
